[gd_scene load_steps=10 format=3 uid="uid://co5fqnib3ohr2"]

[ext_resource type="Theme" uid="uid://si08rmojap6x" path="res://theme.tres" id="1_gxtua"]
[ext_resource type="Script" path="res://scenes/pages/grades/grades.gd" id="2_n3uu6"]
[ext_resource type="Script" path="res://scenes/pages/grades/buttons_disposition.gd" id="3_ffx74"]
[ext_resource type="Texture2D" uid="uid://bwcu3dpbt5i76" path="res://assets/ui/icon-grid.svg" id="3_obffu"]
[ext_resource type="Texture2D" uid="uid://u0pr4cgk01bp" path="res://assets/ui/icon-list.svg" id="4_vs7b8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dn4mx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mumgt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i2sv6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihu8r"]

[node name="Grades" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 14628.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_gxtua")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 200
script = ExtResource("2_n3uu6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"Header2"
text = "TR_GRADES"
autowrap_mode = 2
uppercase = true

[node name="ButtonsDisposition" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
script = ExtResource("3_ffx74")

[node name="ButtonGrid" type="Button" parent="VBoxContainer/ButtonsDisposition"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/icon_normal_color = Color(0.584314, 0.584314, 0.584314, 1)
theme_override_colors/icon_focus_color = Color(0.584314, 0.584314, 0.584314, 1)
theme_override_colors/icon_hover_color = Color(0.584314, 0.584314, 0.584314, 1)
theme_override_constants/icon_max_width = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_dn4mx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mumgt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i2sv6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ihu8r")
toggle_mode = true
icon = ExtResource("3_obffu")

[node name="ButtonList" type="Button" parent="VBoxContainer/ButtonsDisposition"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/icon_normal_color = Color(0.584314, 0.584314, 0.584314, 1)
theme_override_colors/icon_focus_color = Color(0.584314, 0.584314, 0.584314, 1)
theme_override_colors/icon_hover_color = Color(0.584314, 0.584314, 0.584314, 1)
theme_override_constants/icon_max_width = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_dn4mx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mumgt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i2sv6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ihu8r")
toggle_mode = true
icon = ExtResource("4_vs7b8")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GridDisposition" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ListDisposition" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 40

[connection signal="disposition_changed" from="VBoxContainer/ButtonsDisposition" to="." method="_on_disposition_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonsDisposition/ButtonGrid" to="VBoxContainer/ButtonsDisposition" method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="VBoxContainer/ButtonsDisposition/ButtonList" to="VBoxContainer/ButtonsDisposition" method="_on_button_pressed" binds= [1]]
